# scaleapi-python-client

./: .gitignore  .openapi-generator-ignore  .pre-commit-config.yaml  .pylintrc  LICENSE  MANIFEST  README.md  README.rst  local_test.py  migration_guide.rst  publish.sh  pypi_update_guide.md  setup.cfg  setup.py  tox.ini  v2_generator.json
.circleci/: config.yml
.github/: pull_request_template.md
.openapi-generator/: FILES
docs/: dev_requirements.txt  developer_guide.md  migration_guide.md  pypi_update_guide.md  release_notes_template.md
examples/: cancel_batch.py
scale/: __init__.py  tasks.py
scaleapi/: __init__.py  _version.py  api.py  batches.py  benchmarks.py  evaluation_tasks.py  exceptions.py  files.py  projects.py  quality_tasks.py  studio.py  tasks.py  teams.py  training_tasks.py
scaleapi/api_client/v2/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
scaleapi/api_client/v2/api/: __init__.py  v2_api.py
scaleapi/api_client/v2/models/: __init__.py  annotation.py  annotation_boolean.py  annotation_boolean_properties.py  annotation_category.py  annotation_category_multiple.py  annotation_category_multiple_properties.py  annotation_category_properties.py  annotation_file.py  annotation_file_properties.py  annotation_file_properties_value.py  annotation_integer.py  annotation_integer_properties.py  annotation_labeled_text.py  annotation_labeled_text_properties.py  annotation_metadata.py  annotation_ranked_choices.py  annotation_ranked_choices_properties.py  annotation_text.py  (+102 more)
tests/: t_studio.py  test_client.py  test_v2_client.py
