[metadata]
long_description = file: README.rst
long_description_content_type = text/x-rst

[flake8]
# Recommend matching the black line length (default 88)
max-line-length = 88
max-doc-length = 72
max-complexity = 10
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
